--- a/src/app/domain/home/ui/categories/categories.component.html
+++ b/src/app/domain/home/ui/categories/categories.component.html
@@ -1,1 +1,3 @@
-<p>categories works!</p>
+<app-card *ngFor="let category of categories "
+          [props]="{ title: category.name, description: category.description }">
+</app-card>
