--- a/src/app/domain/home/ui/items/items.component.html
+++ b/src/app/domain/home/ui/items/items.component.html
@@ -1,3 +1,3 @@
 <app-card *ngFor="let item of items "
-          [props]="{ title: item.name, description: item.description }">
+          [props]="{ title: item.name, description: item.description, link: './item/' + item.id }">
 </app-card>
