--- a/src/app/domain/home/home.component.html
+++ b/src/app/domain/home/home.component.html
@@ -2,6 +2,7 @@
                 *ngIf="categories$ | async as categories"
                 [categories]="categories">
 </app-categories>
+<h1>Categories</h1>
 <app-items
            *ngIf="items$ | async as items"
            [items]="items">
